; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_task_inspect.c_check_secure_kernel.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_task_inspect.c_check_secure_kernel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"kern.secure_kernel\00", align 1
@.str.1 = private unnamed_addr constant [63 x i8] c"secure kernel: processor_set_tasks will not return kernel_task\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @check_secure_kernel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_secure_kernel() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  store i32 0, i32* %1, align 4
  store i64 4, i64* %2, align 8
  %3 = call i32 @sysctlbyname(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32* %1, i64* %2, i32* null, i32 0)
  %4 = call i32 @T_ASSERT_POSIX_SUCCESS(i32 %3, i32* null)
  %5 = load i32, i32* %1, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @T_SKIP(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %0
  ret void
}

declare dso_local i32 @T_ASSERT_POSIX_SUCCESS(i32, i32*) #1

declare dso_local i32 @sysctlbyname(i8*, i32*, i64*, i32*, i32) #1

declare dso_local i32 @T_SKIP(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
